<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:autofillHints="@string/title"
        android:lines="1"
        android:inputType="text|textCapSentences"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/noteEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top"
        android:hint="@string/text"
        android:autofillHints="@string/text"
        android:inputType="textMultiLine|textCapSentences"
        app:layout_constraintBottom_toTopOf="@+id/pinFAB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

    <EditText
        android:id="@+id/subtextEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/subtext"
        android:hint="@string/subtext"
        android:inputType="text|textCapSentences"
        android:lines="1"
        app:layout_constraintBottom_toBottomOf="@+id/pinFAB"
        app:layout_constraintEnd_toStartOf="@+id/more_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pinFAB" />

    <ImageButton
        android:id="@+id/more_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:contentDescription="@string/unpin"
        android:padding="4dp"
        android:src="@drawable/ic_baseline_more_horiz_24"
        app:layout_constraintBottom_toBottomOf="@+id/pinFAB"
        app:layout_constraintEnd_toStartOf="@id/pinFAB"
        app:layout_constraintStart_toEndOf="@+id/pin_note_play_button"
        app:layout_constraintTop_toTopOf="@+id/pinFAB" />

    <FrameLayout
        android:id="@+id/pin_note_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/pinFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/pin"
        android:src="@drawable/ic_baseline_push_pin_24"
        app:tint="?android:colorBackground"
        app:rippleColor="?colorControlActivated"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>